--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     Nam perspiciatis, enim tempore accusantium asperiores quo? Ni
     phil maiores quibusdam qui aliquam iste voluptatum nostrum soluta autem possimus, in perspiciatis sed sapiente quo nam officia iusto id, nisi dicta sit?</p>
     <P> Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, doloribus eius cupiditate similique explicabo et laborum expedita. Dolor, assumenda maxime numquam ducimus recusandae blanditiis, harum, repellat quos voluptates libero suscipit!S</P>
+    <script src="./app.js"></script>
 </body>
 </html>
